Build support for BlkKin (LTTng + Zipkin) tracing
 * Adds --with-blkin to autoconf (default without)
 * Adds BLKIN_LIBS to necessary automake files
 * Adds documentation for testing BlkKin tracing

Signed-off-by: Andrew Shewmaker <agshew@gmail.com>
Signed-off-by: Marios-Evaggelos Kogias <marioskogias@gmail.com>
Signed-off-by: Chendi.Xue <chendi.xue@intel.com>
Signed-off-by: Casey Bodley <cbodley@redhat.com>
Signed-off-by: Chendi Xue <chendi.xue@intel.com>

Conflicts:
	do_autogen.sh
	src/Makefile-server.am
	src/librbd/Makefile.am
	src/mon/Makefile.am
	src/os/Makefile.am
	src/osd/Makefile.am

--- a/src/mon/Makefile.am
+++ b/src/mon/Makefile.am
@@ -22,6 +22,12 @@ libmon_a_SOURCES = \
 libmon_a_LIBADD =
 noinst_LIBRARIES += libmon.a
 
+if WITH_BLKIN
+libmon_a_CPPFLAGS = $(AM_CPPFLAGS) -DWITH_BLKIN
+libmon_a_CXXFLAGS = $(AM_CXXFLAGS) $(BLKIN_CFLAGS)
+#libmon_a_LIBADD += $(BLKIN_LIBS)
+endif
+
 noinst_HEADERS += \
 	mon/AuthMonitor.h \
 	mon/DataHealthService.h \
